--- a/doc/md/English/8._Revision_History.md
+++ b/doc/md/English/8._Revision_History.md
@@ -41,6 +41,6 @@
 
 :   Minor bugfixes, new binary output for waveform, updated references.
 
-2019-09-01 (v5.0)
+2019-08-27 (v5.0.0)
 
-:   New web-based documentation, stress/strain waveform output, and many bugfixes. 
+:   New web-based documentation, stress/strain waveform output, slip-based source specification, and many bugfixes. 
