--- a/doc/md/Japanese/8._Revision_History.md
+++ b/doc/md/Japanese/8._Revision_History.md
@@ -49,6 +49,6 @@
 
 :   Minor bugfixes, new binary output for waveform, updated references.
 
-2019-09-01 (v5.0)
+2019-08-27 (v5.0.0)
 
-:   ウェブベースの新しいUser's Guide, 歪・応力波形の出力機能，バグ修正など
+:   ウェブベースの新しいUser's Guide, 歪・応力波形の出力機能，震源のすべり量指定，バグ修正など
