--- a/doc/md/English/2._Parameter_Settings/0208_abc.md
+++ b/doc/md/English/2._Parameter_Settings/0208_abc.md
@@ -62,3 +62,5 @@ The Cerjan's sponge always gives a very stable result.
     **`fullspace_mode`** (new in version 5)
     : Apply the absorbing boundary condition at the lower end of the $z$-axis. Usually this is not necessary as there is a air (vacuum) column at the shallowmost portion. This option may be useful for simulating wave propagation in full-space without surface. 
     
+!!! Caution
+    Fullspace mode works only at 2D codes (P-SV and SH) at version 5.0.0. Fullspace mode in 3D code will be implemented in (near) future version. 
