Benchmark mode description

--- a/doc/md/Japanese/2._パラメタ設定/0202_env.md
+++ b/doc/md/Japanese/2._パラメタ設定/0202_env.md
@@ -22,3 +22,8 @@
 
     **`ipad, jpad, kpad`**
     : x, y, z各方向の配列確保の水増しサイズ．計算機によっては，実際の計算領域よりも配列のメモリ確保領域を微妙に増やすことで，計算速度が改善することがある．ただしこれらはあくまでもメモリ確保上の水増しであり，計算結果には影響しない．
+
+
+!!! Caution "ベンチマークモードについて"
+
+    バージョン 5.0.2 までは，`example/input.inf` のサンプルファイルでは `benchmark_mode = .true.` とされていた．このファイルを修正して計算しようとしても，`benchmark_mode`のため速度構造や震源の変更の一切を受け入れない状態になっている．バージョン 5.1からは，デフォルトでこのパラメタは`.false.`となった．
