--- a/doc/md/English/2._Parameter_Settings/0202_env.md
+++ b/doc/md/English/2._Parameter_Settings/0202_env.md
@@ -35,3 +35,8 @@
     array size using these parameters may improve the performance. The
     expanded array will not be used for the simulation. Therefore, the
     simulation result is not affected by changing this option.
+
+
+!!! Caution "Benchmark Mode"
+
+    Until version 5.0.2, an example input file `example/input.inf` contained `benchmark_mode = .true.` which neglects many changes of parameters related to velocity structure and earthquake source. After version 5.1, this parameter is set to `.false.` in the example file. 
