Add strict_mode descriptions

--- a/doc/md/English/2._Parameter_Settings/0202_env.md
+++ b/doc/md/English/2._Parameter_Settings/0202_env.md
@@ -28,6 +28,10 @@
     the parameter specification. This is used for validation and
     performance measurements.
 
+    **`strict_mode`** **(New in v5.1)**
+    : If this flag is `.true.`, the all necessary parameter must be explicitly written in the input file. 
+    By default this parameter is set to `.false.`, so that `OpenSWPC` will use parameter-specific default values if the parameter is not found in the input file. 
+
     **`ipad, jpad, kpad`**
     : Expand the Fortran array sizes along the x-, y-, and z-directions.
     In some computer architectures, the computation speed is very
