--- a/doc/md/Japanese/2._パラメタ設定/0202_env.md
+++ b/doc/md/Japanese/2._パラメタ設定/0202_env.md
@@ -20,6 +20,9 @@
     **`benchmark_mode`**
     : `.true.`の場合，入力パラメータに関わらず固定の構造・グリッド間隔で動作させる．正常動作と計算速度確認のためのオプションである．
 
+    **`strict_mode`** **(New in v5.1)**
+    : `.true.`の場合，あらゆる必要なパラメタが明示的に指定されていなければならない．`.false.`（あるいは指定なし）の場合には，いくつかのパラメタについては無指定の場合にデフォルト値が設定される．その場合には画面に採用したデフォルト値が表示される．
+
     **`ipad, jpad, kpad`**
     : x, y, z各方向の配列確保の水増しサイズ．計算機によっては，実際の計算領域よりも配列のメモリ確保領域を微妙に増やすことで，計算速度が改善することがある．ただしこれらはあくまでもメモリ確保上の水増しであり，計算結果には影響しない．
 
