--- a/doc/md/English/8._Revision_History.md
+++ b/doc/md/English/8._Revision_History.md
@@ -44,3 +44,7 @@
 2019-08-27 (v5.0.0)
 
 :   New web-based documentation, stress/strain waveform output, slip-based source specification, and many bugfixes. 
+
+2020-08-13 (v5.1.0)
+
+:   Strict-mode
