Remove old GMT4 scripts

--- a/doc/md/English/3._Related_Tools/0305_misc.md
+++ b/doc/md/English/3._Related_Tools/0305_misc.md
@@ -2,10 +2,9 @@
 
 ## timvis scripts
 
-Four scripts, `timvis.gmt4`, `/timvis.gmt5`, `timvis_abs.gmt4`, and
-`/timvis_abs.gmt5`, are used to visualize the elapsed time of the
+Scripts `timvis.gmt` and `timvis_abs.gmt` are used to visualize the elapsed time of the
 computation obtained with the input parameter `stopwatch_mode = .true.`
-by using GMT versions 4 and 5.
+by using GMT versions 5 or later.
 
 ## Geographic Coordinate Conversion
 
