--- a/doc/md/Japanese/3._関係ツール/0305_misc.md
+++ b/doc/md/Japanese/3._関係ツール/0305_misc.md
@@ -2,9 +2,9 @@
 
 ## timvis tools
 
-`timvis.gmt4`, `timvis.gmt5`, `timvis_abs.gmt4`,
-`timvis_abs.gmt5`の4つのスクリプトがある．これらは`stopwatch_mode = .true.`の際に出力される経過時間ファイルを解析し，各計算ノードでサブルーチン毎の計算負荷のバランスを可視化する．GMTバージョン4用と5用の2セットが用意されている．
+`timvis.gmt` と `timvis_abs.gmt` は`stopwatch_mode = .true.`の際に出力される経過時間ファイルを解析し，各計算ノードでサブルーチン毎の計算負荷のバランスを可視化する．GMTバージョン5以降が必要である．
 
 ## 地理座標変換
 
 `ll2xy.x`と`xy2ll.x`は，で採用されているガウス・クリューゲル変換によって緯度経度とデカルト座標系の相互変換を行うツールである．
+
