--- a/doc/md/English/2._Parameter_Settings/0208_abc.md
+++ b/doc/md/English/2._Parameter_Settings/0208_abc.md
@@ -59,8 +59,13 @@ The Cerjan's sponge always gives a very stable result.
     : The low velocity layer is removed if this flag is `.true.`, to
     stabilize PML. This option may increase the amplitude or artificial reflection as a side effect. 
 
+<!---
     **`fullspace_mode`** (new in version 5.2)
     : Apply the absorbing boundary condition at the lower end of the $z$-axis. Usually this is not necessary as there is a air (vacuum) column at the shallowmost portion. This option may be useful for simulating wave propagation in full-space without surface. Note that most of the ready-made velocity structure assumes the existance of the free surface. One may have to prepare the one's own velocity structure (by modifying the `user` velocity model code) to fully utilize this mode. 
     
 !!! Caution
     Fullspace mode fully works after version 5.2. Fullspace mode works only in 2D codes between Versions 5.0 and 5.1.
+---> 
+
+!!! Caution
+    The `fullspace_mode` implemented in Version 5.0 -- 5.1 has been temporarily disabled because it was found to cause trouble in certain environments even when the mode was not set. The cause of the trouble is being investigated. 
