--- a/doc/md/English/8._Revision_History.md
+++ b/doc/md/English/8._Revision_History.md
@@ -48,3 +48,7 @@
 2020-08-13 (v5.1.0)
 
 :   Strict-mode
+
+2021-08-27 (v5.2.0)
+
+:   Earth-flattening transformation, psmeca (a new source representation), seawater velocity structure w/ SOFAR channel, a new tool that converts 2D simulation output into pseudo-3D, supporting new Japanese supercomputers, and some minor bugfixes. 
