--- a/doc/md/Japanese/8._Revision_History.md
+++ b/doc/md/Japanese/8._Revision_History.md
@@ -56,3 +56,7 @@
 2020-08-13 (v5.1.0)
 
 :   Strict-mode
+
+2021-08-27 (v5.2.0)
+
+:   Earth-flattening変換による地球球面効果の導入，震源指定の新しいpsmecaモード，低速度なSOFARチャネルを含む海中速度構造の導入，2Dシミュレーション波形の疑似3D変換ツール，新しいスーパーコンピュータへの対応，バグ修正など
