--- a/doc/md/1._SetUp/0101_env.en.md
+++ b/doc/md/1._SetUp/0101_env.en.md
@@ -14,15 +14,19 @@ This functionality may not be implemented with older compilers.
 
 This code was developed in the following environment: 
 
--   Apple macOS Mojave 10.14.3
--   GNU `gfortran` 8.2.0
+-   Apple macOS Ventura 13.0/Apple M1 Max
+-   GNU `gfortran` 12.2.0
 -   `OpenMPI` 4.0.0
 
 In addition, the following computers were confirmed to work with \swpc: 
+- Ubuntu Linux 22.0 w/ gfortran 11.3 (Intel Xeon)
+- JAMSTEC Earth Simulator (NEC SX Aurora Tsubasa)
+- Wisteria/BDEC-01 of the University of Tokyo (Fujitsu FX1000; A64FX)
 
+(The followings are obsolete architectures that no longer exist but worked in the past. )
 
 -   EIC computer, ERI/UTokyo (ver. 2015; SGI Altix; intel fortran)
--   JAMSTEC Earth Simulator (NEC SX-ACE; NEC compiler)
+-   JAMSTEC Earth Simulator (3rd generation; NEC SX-ACE; NEC compiler)
 -   AICS K computer (Fujitsu compiler)
 -   Nagoya University (FX10/Fx100; Fujitsu compiler)
 -   Linux Cent OS 6.6 (gfortran 4.9.2 & mpich)
